[package]
name = "crate-without-book"
version = "0.1.0"
authors = ["Tamas Kis"]
edition = "2024"
description = "TODO_DESCRIPTION"
documentation = "https://docs.rs/crate-without-book"
repository = "https://github.com/tamaskis/crate-without-book"
license = "MIT OR Apache-2.0"

exclude = [".gitignore", ".github/", ".vscode/", "Cargo.lock", "book/"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]

[dependencies]

[dev-dependencies]